umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_moleculelike_openbabel_culgi_08.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 46
bond_count: 49
sum_formula: C15H21N5O5
graph6: mhEGOCP?_?_A?@?@??G?A??C?OO??_??C?@??@?@??????@???@???@????G???@???@C????G????S?????@???????_????C?????G?????G?????C?????@??????A??????O??????_?????@???????_??????O???????_??
