umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_moleculelike_openbabel_culgi_11.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 46
bond_count: 49
sum_formula: C20H24O2
graph6: "mhCGOC@?G?_P?@??`?G?@O?G??G??O??D??@???G???_??C?C??_???O???C????G????_????_????_????@?????G?????O?????O?????_?????O?????G??????C??????_?????@??????A???????O??????C???????_???"
