umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_moleculelike_openbabel_perception17.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 13
bond_count: 13
sum_formula: C11O2
graph6: LKQ?Q??C_K@C?@
