umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_moleculelike_openbabel_razinger_fig1_l.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 40
bond_count: 45
sum_formula: C40
graph6: gsOGGD@G??_@?@G?a???@??C??G_?GC????G?@?????_??@???@????_??AG??@?????C????G????G??@?C??@???????G?????_????@???O?@?????A?????_????C??
