umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_moleculelike_openbabel_razinger_fig1_p.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 18
bond_count: 17
sum_formula: C14O4
graph6: QiGOOOA?_A?G@???_?OG???C??O
