umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_moleculelike_openbabel_razinger_fig7_12.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 17
bond_count: 16
sum_formula: C13BrClFO
graph6: "P?P???AO??SG?_?_???_P?[G"
